# chess-eval

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  app_interactive.py  chess_model.pt  config.yml  data.py  data_processing_config.yml  hp_tuning.py  hp_tuning_lr.py  ml_config.yml  networks.py  pyproject.toml  train.py
.github/workflows/: ci.yml
chess_eval/: app.py  app_fastapi.py  app_interactive.py  architecture_tuning.py  constants.py  data_manipulation.py  data_processing.py  hp_tuning_lr.py  networks.py  scaling.json  schemas.py  train.py  tuning_class.py  utils.py
chess_eval/templates/: results.html  results2.html
data/games/train/: query.txt
data/games/val/: query.txt
data/raw/train/: query.txt
docs/: Makefile  conf.py  index.rst
games/train/: query.txt
games/val/: query.txt
mlruns/0/: meta.yaml
mlruns/525813990100363701/: meta.yaml
mlruns/525813990100363701/03646a6f6ab946b8853af6b4039c4ac2/: meta.yaml
mlruns/525813990100363701/06b82a17df294ac0ba23b931bbde01fa/: meta.yaml
mlruns/525813990100363701/08f26ff9d2864089b60d59d7c63e9d1b/: meta.yaml
mlruns/525813990100363701/093cda9c1a9e46499c07907290436a93/: meta.yaml
mlruns/525813990100363701/0b626b91f28c48ba9524c4de9f52df4c/: meta.yaml
mlruns/525813990100363701/0e145bab65044100833b9a890efeaea0/: meta.yaml
mlruns/525813990100363701/108f6525ffd84fd78b05a5974ae2d696/: meta.yaml
mlruns/525813990100363701/18b56fddc16a43e7bdf8bfd1d88ef96c/: meta.yaml
mlruns/525813990100363701/1a721831b11a47c7aa625fe25ddcc158/: meta.yaml
mlruns/525813990100363701/1d231766a3264d4ca57119aff7b89dda/: meta.yaml
mlruns/525813990100363701/24effdf4512943a49be8992901177921/: meta.yaml
mlruns/525813990100363701/2b512427606e4a2c83b3ac761b52cc40/: meta.yaml
mlruns/525813990100363701/3178089720ff49fe97398390008243aa/: meta.yaml
mlruns/525813990100363701/3b653430b9f3474ea2c3e4463fbddf20/: meta.yaml
mlruns/525813990100363701/3cddd31f24704bfa89249a0ac2661222/: meta.yaml
mlruns/525813990100363701/4b4f8b8bb0c9499c991577286b36f802/: meta.yaml
mlruns/525813990100363701/626ffb28431147aeb9ce316b60baeb64/: meta.yaml
mlruns/525813990100363701/70f30c65ba0740a19c0cb3eaafb56e24/: meta.yaml
mlruns/525813990100363701/79aab97d829f4127a783aa759b80141f/: meta.yaml
mlruns/525813990100363701/7d3925b672224774b4659e2dc88c3364/: meta.yaml
mlruns/525813990100363701/811972ffc1b942c49c8e456af43bd2ad/: meta.yaml
mlruns/737092110449732646/: meta.yaml
models/: chess_model.pt  scaling.json  test_model.pt
tbc/: app_interactive.py  tuning_class.py
templates/: index.html  results.html  results2.html
tests/unit/: test_a.py
(+935 files in other folders)
