[project]
name = "chess-eval"
version = "0.1.0"
description = "Chess evaluation calculator project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "stockfish>=3.28.0",
    "torch>=2.7.1",
    "waitress>=3.0.2",
]
